[change] avatar align 코드 변경

--- a/assets/style/base/utils.scss
+++ b/assets/style/base/utils.scss
@@ -185,16 +185,19 @@
   &.flex-column {
     flex-direction: column;
   }
-  &.justify-content-center {
+  &.justify-center {
     justify-content: center;
   }
-  &.justify-content-between {
+  &.justify-between {
     justify-content: space-between;
   }
-  &.justify-content-end {
-    justify-content: right;
+  &.justify-start {
+    justify-content: flex-start;
   }
-  &.align-items-center {
+  &.justify-end {
+    justify-content: flex-end;
+  }
+  &.align-center {
     align-items: center;
   }
 }
