--- a/assets/style/base/variables.scss
+++ b/assets/style/base/variables.scss
@@ -20,3 +20,11 @@ $light:                  300;
 $normal:                 500;
 $medi:                   700;//h7이고 medi면 500
 $bold:                   700;
+
+
+//
+//  # Selection
+//
+$body-selection:         10;
+$body-user-select:       none;
+$div-user-select:        text;
