--- a/assets/style/base/init.scss
+++ b/assets/style/base/init.scss
@@ -38,7 +38,7 @@ html {
     ::-webkit-scrollbar-thumb {
       height: 50px;
       width: 50px;
-      background: $gray200;;
+      background: $gray200;
       -webkit-border-radius: 8px;
       border-radius: 8px;
       -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, .1);
