[add] gray850, 900 추가

--- a/assets/style/base/color.scss
+++ b/assets/style/base/color.scss
@@ -1,6 +1,7 @@
 //Gray
 $black: #000000;
-$gray900: #21282F;
+$gray900: #151617;
+$gray850: #21282F;
 $gray800: #495057;
 $gray700: #6F767D;
 $gray600: #838990;
