--- a/assets/style/base/color.scss
+++ b/assets/style/base/color.scss
@@ -43,5 +43,5 @@ $yellow100: #FFFACC;
 // Primary
 $primary: $green600;
 $success: $blue600;
-$error = $red600;
-$gray = $gray600;
+$error: $red600;
+$gray: $gray600;
