[add] Button fixed, absolute props 추가

--- a/assets/style/base/utils.scss
+++ b/assets/style/base/utils.scss
@@ -178,11 +178,13 @@
 
 // position
 .p-absolute {
-  position: absolute;
+  position: absolute !important;
 }
-
+.p-fixed {
+  position: fixed !important;
+}
 .p-relative {
-  position: relative;
+  position: relative !important;
 }
 
 .flex {
