Feature/change color (#161)
* [change] red000 변경

* [add] gray850, 900 추가

* [change] 싱크 안 맞는 색상들 변경

* [fix] 오타

* [change] Contents body color gray700 -> gray850

* [change] Toast basic  color gray700 -> gray800

* [change] popover text color

* [change] Input, SearchInput text color

* [change] Card category text color gray900 -> gray800

* [change] Modal title, content text color

* [remove] 파일 충돌 제거

Co-authored-by: seongsil <yooo1201@naver.com>
Co-authored-by: hanaKim <hananumber1@nate.com>

--- a/assets/style/base/color.scss
+++ b/assets/style/base/color.scss
@@ -1,6 +1,7 @@
 //Gray
 $black: #000000;
-$gray900: #21282F;
+$gray900: #151617;
+$gray850: #21282F;
 $gray800: #495057;
 $gray700: #6F767D;
 $gray600: #838990;
@@ -24,7 +25,7 @@ $red800: #CC2727;
 $red600: #FA5252;
 $red400: #FF8888;
 $red100: #FFDFDF;
-$red000: #FCF8F8;
+$red000: #FFF7F7;
 
 
 //Blue
@@ -42,3 +43,5 @@ $yellow100: #FFFACC;
 // Primary
 $primary: $green600;
 $success: $blue600;
+$error: $red600;
+$gray: $gray600;
