--- a/assets/style/base/utils.scss
+++ b/assets/style/base/utils.scss
@@ -178,13 +178,11 @@
 
 // position
 .p-absolute {
-  position: absolute !important;
+  position: absolute;
 }
-.p-fixed {
-  position: fixed !important;
-}
+
 .p-relative {
-  position: relative !important;
+  position: relative;
 }
 
 .flex {
