Feature/change popover (#176)
* [add] Typography에 c-application class 추가

* [add] Tooltip Story 트리구조 반영

* [add] Icon c-application class 추가

* [add] Shadow mdx story

* [change] Box story Basic -> Default

* [change] Box 트리구조 반영 (General)

* [add] Popover $attrs, listeners

* [change] event name showPopOver -> showPopover

* [change] Popover wrapper class name , contents style

* [add] Popover paddingX props, placement props validator

* [add] Popover story

* [add] Popover $attrs, listeners

* [change] event name showPopOver -> showPopover

* [change] Popover wrapper class name , contents style

* [add] Popover paddingX props, placement props validator

* [add] Popover story

* [fix] 오타 수정 (contents -> content)

Co-authored-by: seongsil <yooo1201@naver.com>

--- a/assets/style/tooltip/popover.scss
+++ b/assets/style/tooltip/popover.scss
@@ -2,7 +2,7 @@
 .c-popover {
   .c-popover_inner {
     padding: 0 !important;
-    .popover_contents_wrapper {
+    .c-popover--content-wrapper {
       padding: 6px 0;
       a {
         display: inline-block;
@@ -10,9 +10,12 @@
       & > * {
         padding: 6px 12px;
         cursor: pointer;
-      }
-      & > *:hover {
-        background: $gray100;
+        &:hover {
+          background: $gray100;
+        }
+        &:not(:last-child) {
+          margin-bottom: 4px;
+        }
       }
     }
   }
