--- a/assets/style/base/variables.scss
+++ b/assets/style/base/variables.scss
@@ -28,3 +28,5 @@ $bold:                   700;
 $body-selection:         10;
 $body-user-select:       none;
 $div-user-select:        text;
+
+$alert-height:          56px;
