--- a/assets/style/tooltip/popover.scss
+++ b/assets/style/tooltip/popover.scss
@@ -1,6 +1,6 @@
 @import "common";
 .c-popover {
-  .c-popover_inner {
+  .c-popover--inner {
     padding: 0 !important;
     .c-popover--content-wrapper {
       padding: 6px 0;
