[change] border color gray250으로 변경 (TextField, Input, Select, Textarea)

--- a/assets/style/base/color.scss
+++ b/assets/style/base/color.scss
@@ -47,4 +47,4 @@ $error: $red600;
 $secondary: $gray600;
 
 $border-color: $gray200;
-$input-border-color: $gray250; // Input, TextField, SearchInput, Textarea, Dropdown, Select
+$input-border-color: $gray250; // Input, Select, Textarea, TextField
