--- a/assets/style/base/color.scss
+++ b/assets/style/base/color.scss
@@ -45,3 +45,6 @@ $primary: $green600;
 $success: $blue600;
 $error: $red600;
 $secondary: $gray600;
+
+$input-hover-border-color: $gray400 // Input, Select, Textarea, TextField
+
