DatePicker, Hint 추가, input-border-color 변경(gray250) (#286)
* [add] vue2-datepicker

* [add] DatePicker component, style, mdx

* [change] border color gray250으로 변경 (TextField, Input, Select, Textarea)

* [add] DatePicker valueType validator

* [add] DatePicker mdx 설명 추가

* [add] Hint

* [change] TextField에 Hint 컴포넌트 적용

* [add] DatePicker에 Hint 적용

* [add] datepicker input focus style 추가

Co-authored-by: hanaKim <hananumber1@nate.com>

--- a/assets/style/base/color.scss
+++ b/assets/style/base/color.scss
@@ -8,6 +8,7 @@ $gray600: #838990;
 $gray500: #979CA2;
 $gray400: #BEC2C6;
 $gray300: #D2D5D8;
+$gray250: #DEE0E3;
 $gray200: #E8EAED;
 $gray100: #F4F5F7;
 $gray000: #FAFBFC;
@@ -40,8 +41,10 @@ $yellow700: #FFD500;
 $yellow400: #FFEE7A;
 $yellow100: #FFFACC;
 
-// Primary
 $primary: $green600;
 $success: $blue600;
 $error: $red600;
 $secondary: $gray600;
+
+$border-color: $gray200;
+$input-border-color: $gray250; // Input, Select, Textarea, TextField
