[fix] textarea ouline focus border color 수정 (#289)
* [fix] textarea ouline focus border color 수정

* [fix]

--- a/assets/style/base/color.scss
+++ b/assets/style/base/color.scss
@@ -48,3 +48,4 @@ $secondary: $gray600;
 
 $border-color: $gray200;
 $input-border-color: $gray250; // Input, Select, Textarea, TextField
+$input-hover-border-color: $gray400 // Input, Select, Textarea, TextField
