[add] DatePicker cursor pointer

--- a/assets/style/datePicker/datePicker.init.scss
+++ b/assets/style/datePicker/datePicker.init.scss
@@ -8,6 +8,7 @@
     border: 1px solid $input-border-color;
     box-shadow: none;
     @include border-radius(2px);
+    cursor: pointer;
 
     &::placeholder {
       color: $gray300;
