--- a/assets/style/base/color.scss
+++ b/assets/style/base/color.scss
@@ -15,7 +15,7 @@ $gray000: #FAFBFC;
 $white: #FFFFFF;
 
 //Green
-$green800: #00992B;
+$green800: #00B334;
 $green600: #00C854;
 $green400: #5CE596;
 $green100: #DEFAEB;
