[change] Tab 내부를 slot으로 변경

--- a/assets/style/base/mixins.scss
+++ b/assets/style/base/mixins.scss
@@ -212,3 +212,9 @@
   -ms-user-select: $select; // IE10+
   user-select: $select;
 }
+
+@mixin remove-active-and-focus() {
+  &:active, &:focus {
+    background: transparent;
+  }
+}
