[change] c-pointer, c-default !important 추가

--- a/assets/style/base/utils.scss
+++ b/assets/style/base/utils.scss
@@ -222,10 +222,10 @@
 
 // cursor
 .c-pointer {
-  cursor: pointer;
+  cursor: pointer !important;
 }
 .c-default {
-  cursor: default;
+  cursor: default !important;
 }
 
 .h-screen {
