--- a/assets/style/base/utils.scss
+++ b/assets/style/base/utils.scss
@@ -109,3 +109,15 @@
 .not-scroll {
   overflow: hidden;
 }
+
+// word break
+.break-normal {
+  overflow-wrap: normal;
+  word-break: normal;
+}
+.break-words {
+  overflow-wrap: break-word;
+}
+.break-all {
+  word-break: break-all;
+}
