[test] NewCol, NewRow

--- a/assets/style/base/mixins.scss
+++ b/assets/style/base/mixins.scss
@@ -137,7 +137,21 @@
   border-radius: $radius;
 }
 
-//  # layout
+@mixin get-columns-width-pc($cols) {
+  @include pc {
+    -ms-flex: 0 0 calc(((100% - (#{$grid-gutter-width-pc} * (#{$grid-columns-pc} - 1))) / #{$grid-columns-pc} * #{$cols}) + #{$grid-gutter-width-pc} * (#{$cols} - 1));
+    flex: 0 0 calc(((100% - (#{$grid-gutter-width-pc} * (#{$grid-columns-pc} - 1))) / #{$grid-columns-pc} * #{$cols}) + #{$grid-gutter-width-pc} * (#{$cols} - 1));
+    max-width: calc(((100% - (#{$grid-gutter-width-pc} * (#{$grid-columns-pc} - 1))) / #{$grid-columns-pc} * #{$cols}) + #{$grid-gutter-width-pc} * (#{$cols} - 1));
+  }
+}
+
+@mixin get-columns-width-mobile($cols) {
+  @include mobile{
+    -ms-flex: 0 0 calc(((100% - (#{$grid-gutter-width-mobile} * (#{$grid-columns-mobile}-1))) / #{$grid-columns-mobile} * #{$cols}) + #{$grid-gutter-width-mobile} * (#{$cols} - 1));
+    flex: 0 0 calc(((100% - (#{$grid-gutter-width-mobile} * (#{$grid-columns-mobile}-1))) / #{$grid-columns-mobile} * #{$cols}) + #{$grid-gutter-width-mobile} * (#{$cols} - 1));
+    max-width: calc(((100% - (#{$grid-gutter-width-mobile} * (#{$grid-columns-mobile}-1))) / #{$grid-columns-mobile} * #{$cols}) + #{$grid-gutter-width-mobile} * (#{$cols} - 1));
+  }
+}
 
 @mixin inline-block() {
   display: -moz-inline-stack;
