--- a/assets/style/base/variables.scss
+++ b/assets/style/base/variables.scss
@@ -6,9 +6,13 @@ $screen-lg:       1140px;
 $iphone:          320px;
 $phone:           $screen-xs; // 480px
 
-$grid-gutter-width:       24px;
-$container-sm:            (1140px + $grid-gutter-width);
-$grid-columns:            12;
+$grid-gutter-width-pc:       24px;
+$grid-gutter-width-mobile:       16px;
+$grid-columns-pc:            12;
+$grid-columns-mobile:            4;
+$container-max-width-pc: 1140px;
+$container-max-width-mobile: 375px;
+$container-sm:            (1140px + $grid-gutter-width-pc);
 
 //
 //  # html
