[fix] col width 계산 시 수치가 이상하게 나오는 현상 수정

--- a/assets/style/base/mixins.scss
+++ b/assets/style/base/mixins.scss
@@ -139,17 +139,15 @@
 
 @mixin get-columns-width-pc($cols) {
   @include pc {
-    -ms-flex: 0 0 calc(((100% - (#{$grid-gutter-width-pc} * (#{$grid-columns-pc} - 1))) / #{$grid-columns-pc} * #{$cols}) + #{$grid-gutter-width-pc} * (#{$cols} - 1));
-    flex: 0 0 calc(((100% - (#{$grid-gutter-width-pc} * (#{$grid-columns-pc} - 1))) / #{$grid-columns-pc} * #{$cols}) + #{$grid-gutter-width-pc} * (#{$cols} - 1));
-    max-width: calc(((100% - (#{$grid-gutter-width-pc} * (#{$grid-columns-pc} - 1))) / #{$grid-columns-pc} * #{$cols}) + #{$grid-gutter-width-pc} * (#{$cols} - 1));
+    -ms-flex: ($container-max-width-pc - $grid-gutter-width-pc * ($grid-columns-pc - 1) ) / $grid-columns-pc * $cols + $grid-gutter-width-pc * ($cols - 1);
+    flex: ($container-max-width-pc - $grid-gutter-width-pc * ($grid-columns-pc - 1) ) / $grid-columns-pc * $cols + $grid-gutter-width-pc * ($cols - 1);
   }
 }
 
 @mixin get-columns-width-mobile($cols) {
   @include mobile{
-    -ms-flex: 0 0 calc(((100% - (#{$grid-gutter-width-mobile} * (#{$grid-columns-mobile}-1))) / #{$grid-columns-mobile} * #{$cols}) + #{$grid-gutter-width-mobile} * (#{$cols} - 1));
-    flex: 0 0 calc(((100% - (#{$grid-gutter-width-mobile} * (#{$grid-columns-mobile}-1))) / #{$grid-columns-mobile} * #{$cols}) + #{$grid-gutter-width-mobile} * (#{$cols} - 1));
-    max-width: calc(((100% - (#{$grid-gutter-width-mobile} * (#{$grid-columns-mobile}-1))) / #{$grid-columns-mobile} * #{$cols}) + #{$grid-gutter-width-mobile} * (#{$cols} - 1));
+    -ms-flex: ($container-max-width-mobile - $grid-gutter-width-mobile * ($grid-columns-mobile - 1) ) / 4 * $cols + $grid-gutter-width-mobile * ($cols - 1);
+    flex: ($container-max-width-mobile - $grid-gutter-width-mobile * ($grid-columns-mobile - 1) ) / 4 * $cols + $grid-gutter-width-mobile * ($cols - 1);
   }
 }
 
