--- a/assets/style/base/mixins.scss
+++ b/assets/style/base/mixins.scss
@@ -137,7 +137,19 @@
   border-radius: $radius;
 }
 
-//  # layout
+@mixin get-columns-width-pc($cols) {
+@include pc {
+-ms-flex: 0 0 ($container-max-width-pc - $grid-gutter-width-pc * ($grid-columns-pc - 1) ) / $grid-columns-pc * $cols + $grid-gutter-width-pc * ($cols - 1);
+flex: 0 0 ($container-max-width-pc - $grid-gutter-width-pc * ($grid-columns-pc - 1) ) / $grid-columns-pc * $cols + $grid-gutter-width-pc * ($cols - 1);
+  }
+}
+
+@mixin get-columns-width-mobile($cols) {
+@include mobile {
+-ms-flex: 0 0 ($container-max-width-mobile - $grid-gutter-width-mobile * ($grid-columns-mobile - 1) ) / 4 * $cols + $grid-gutter-width-mobile * ($cols - 1);
+flex: 0 0 ($container-max-width-mobile - $grid-gutter-width-mobile * ($grid-columns-mobile - 1) ) / 4 * $cols + $grid-gutter-width-mobile * ($cols - 1);
+  }
+}
 
 @mixin inline-block() {
   display: -moz-inline-stack;
