--- a/assets/style/base/color.scss
+++ b/assets/style/base/color.scss
@@ -37,7 +37,7 @@ $blue100: #D6EBFF;
 $blue000: #F2FAFF;
 
 //Yellow
-$yellow700: #FFD500;
+$yellow600: #FFDD33;
 $yellow400: #FFEE7A;
 $yellow100: #FFFACC;
 
