--- a/assets/style/base/variables.scss
+++ b/assets/style/base/variables.scss
@@ -6,15 +6,18 @@ $screen-lg:       1140px;
 $iphone:          320px;
 $phone:           $screen-xs; // 480px
 
+$container-max-width-pc: 1140px;
+$container-max-width-mobile: 375px;
 $grid-outer-padding: 16px;
 $grid-gutter-width-pc:       24px;
 $grid-gutter-width-mobile:       16px;
 $grid-columns-pc:            12;
 $grid-columns-mobile:            4;
-$container-max-width-pc: 1140px;
-$container-max-width-mobile: 375px;
+
 $container-width-pc: $container-max-width-pc - 2 * $grid-outer-padding;
 $container-width-mobile: $container-max-width-mobile - 2 * $grid-outer-padding;
+$grid-column-width-pc: ($container-width-pc - $grid-gutter-width-pc * ($grid-columns-pc - 1) ) / $grid-columns-pc;
+$grid-column-width-mobile: ($container-width-mobile - $grid-gutter-width-mobile * ($grid-columns-mobile - 1) ) / $grid-columns-mobile;
 $container-sm:            (1140px + $grid-gutter-width-pc);
 
 //
