[add] quill editor 컨텐츠용 스타일 추가

--- a/assets/style/quill/quill.init.scss
+++ b/assets/style/quill/quill.init.scss
@@ -24,6 +24,11 @@
   color: $gray800;
   @include body1;
 
+  &-content {
+    min-height: auto;
+    height: auto;
+  }
+
   &.ql-blank::before {
     color: $gray300;
     font-style: normal;
