[add] EmptyBox 컴포넌트 추가

--- a/assets/style/base/utils.scss
+++ b/assets/style/base/utils.scss
@@ -55,6 +55,9 @@
   &.justify-between {
     justify-content: space-between;
   }
+  &.justify-around {
+    justify-content: space-around;
+  }
   &.justify-start {
     justify-content: flex-start;
   }
